# openGLProject

./: .gitignore  CMakeLists.txt  Makefile  imgui.ini
include/glad/: glad.h
output/: imgui.ini
src/: consts.h  cube_shader.fs  main.cpp  rect_shader.fs  rect_shader.vs  shader.h  tri_shader.vs
